// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select disabled select has a different style 1`] = `
.c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c7 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c9 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c10:hover {
  background-color: #DBDEE1;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c8 {
  position: absolute;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: default;
}

.c4 svg {
  color: #B7BBC2;
}

.c5 {
  background-color: #F1F2F2;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c5:hover {
  cursor: default;
}

.c5::-webkit-input-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5::-moz-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5:-ms-input-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5::placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
  >
    Select an option
  </label>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="listbox_uuid1"
    class="c4"
    data-testid="input-wrapper"
    disabled=""
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_uuid1"
      aria-label="Select an option"
      aria-multiline="false"
      class="c5"
      data-testid="input"
      disabled=""
      id="uuid1"
      type="text"
      value=""
    />
    <button
      aria-labelledby="uuid1"
      class="c6"
      data-testid="arrow"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
  </div>
  <div
    aria-labelledby="uuid1"
    class="c7 c8"
    data-testid="listbox-container"
    id="listbox_uuid1"
    role="listbox"
    tabindex="0"
  >
    <ul
      class="c9"
      data-testid="listbox-list"
      role="presentation"
    >
      <li
        class="c10"
        data-testid="listitem-on"
        id="listbox_uuid1_on"
        role="option"
      >
        <span
          class="c11"
        >
          Ontario
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-qc"
        id="listbox_uuid1_qc"
        role="option"
      >
        <span
          class="c11"
        >
          Quebec
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-bc"
        id="listbox_uuid1_bc"
        role="option"
      >
        <span
          class="c11"
        >
          British Columbia
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-ab"
        id="listbox_uuid1_ab"
        role="option"
      >
        <span
          class="c11"
        >
          Alberta
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-mb"
        id="listbox_uuid1_mb"
        role="option"
      >
        <span
          class="c11"
        >
          Manitoba
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-sk"
        id="listbox_uuid1_sk"
        role="option"
      >
        <span
          class="c11"
        >
          Saskatchewan
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-ns"
        id="listbox_uuid1_ns"
        role="option"
      >
        <span
          class="c11"
        >
          Nova Scotia
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-nb"
        id="listbox_uuid1_nb"
        role="option"
      >
        <span
          class="c11"
        >
          New Brunswick
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-nl"
        id="listbox_uuid1_nl"
        role="option"
      >
        <span
          class="c11"
        >
          Newfoundland and Labrador
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-pe"
        id="listbox_uuid1_pe"
        role="option"
      >
        <span
          class="c11"
        >
          Prince Edward Island
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-nt"
        id="listbox_uuid1_nt"
        role="option"
      >
        <span
          class="c11"
        >
          Northwest Territories
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-nu"
        id="listbox_uuid1_nu"
        role="option"
      >
        <span
          class="c11"
        >
          Nunavut
        </span>
      </li>
      <li
        class="c10"
        data-testid="listitem-yt"
        id="listbox_uuid1_yt"
        role="option"
      >
        <span
          class="c11"
        >
          Yukon
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select invalid select has a different style 1`] = `
[
  .c4 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0:focus {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-half);
}

.c9 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c11 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c12:hover {
  background-color: #DBDEE1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c10 {
  position: absolute;
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #CD2C23;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c6:hover {
  cursor: pointer;
}

.c6 svg {
  color: #60666E;
}

.c7 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c7:hover {
  cursor: pointer;
}

.c7::-webkit-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c7::-moz-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c7:-ms-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c7::placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      for="uuid1"
    >
      Select an option
    </label>
    <span
      aria-live="polite"
      class="c4"
      id="uuid1_invalid"
      role="alert"
    >
      <svg
        class="c5"
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
      You must select an option
    </span>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="listbox_uuid1"
      class="c6"
      data-testid="input-wrapper"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_uuid1"
        aria-label="Select an option"
        aria-multiline="false"
        class="c7"
        data-testid="input"
        id="uuid1"
        type="text"
        value=""
      />
      <button
        aria-labelledby="uuid1"
        class="c8"
        data-testid="arrow"
        tabindex="-1"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
    <div
      aria-labelledby="uuid1"
      class="c9 c10"
      data-testid="listbox-container"
      id="listbox_uuid1"
      role="listbox"
      tabindex="0"
    >
      <ul
        class="c11"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          class="c12"
          data-testid="listitem-on"
          id="listbox_uuid1_on"
          role="option"
        >
          <span
            class="c13"
          >
            Ontario
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-qc"
          id="listbox_uuid1_qc"
          role="option"
        >
          <span
            class="c13"
          >
            Quebec
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-bc"
          id="listbox_uuid1_bc"
          role="option"
        >
          <span
            class="c13"
          >
            British Columbia
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-ab"
          id="listbox_uuid1_ab"
          role="option"
        >
          <span
            class="c13"
          >
            Alberta
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-mb"
          id="listbox_uuid1_mb"
          role="option"
        >
          <span
            class="c13"
          >
            Manitoba
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-sk"
          id="listbox_uuid1_sk"
          role="option"
        >
          <span
            class="c13"
          >
            Saskatchewan
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-ns"
          id="listbox_uuid1_ns"
          role="option"
        >
          <span
            class="c13"
          >
            Nova Scotia
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-nb"
          id="listbox_uuid1_nb"
          role="option"
        >
          <span
            class="c13"
          >
            New Brunswick
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-nl"
          id="listbox_uuid1_nl"
          role="option"
        >
          <span
            class="c13"
          >
            Newfoundland and Labrador
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-pe"
          id="listbox_uuid1_pe"
          role="option"
        >
          <span
            class="c13"
          >
            Prince Edward Island
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-nt"
          id="listbox_uuid1_nt"
          role="option"
        >
          <span
            class="c13"
          >
            Northwest Territories
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-nu"
          id="listbox_uuid1_nu"
          role="option"
        >
          <span
            class="c13"
          >
            Nunavut
          </span>
        </li>
        <li
          class="c12"
          data-testid="listitem-yt"
          id="listbox_uuid1_yt"
          role="option"
        >
          <span
            class="c13"
          >
            Yukon
          </span>
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    class="c0"
    data-testid="select-skip-option"
    id="uuid2"
    name="uuid1_skip"
    type="radio"
    value="skip"
  />,
  .c1 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c1:hover {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c1 {
  background: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c1 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c1 {
  background: #F1F2F2;
  border-color: #DBDEE1;
  color: #B7BBC2;
}

.c1 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c1 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    class="c0 c1"
    for="uuid2"
  >
    Skip this question
  </label>,
]
`;

exports[`Select matches the snapshot 1`] = `
[
  .c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c7 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c9 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c10:hover {
  background-color: #DBDEE1;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c8 {
  position: absolute;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4 svg {
  color: #60666E;
}

.c5 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c5:hover {
  cursor: pointer;
}

.c5::-webkit-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5::-moz-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5:-ms-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5::placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      for="uuid1"
    >
      Select an option
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="listbox_uuid1"
      class="c4"
      data-testid="input-wrapper"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_uuid1"
        aria-label="Select an option"
        aria-multiline="false"
        class="c5"
        data-testid="input"
        id="uuid1"
        type="text"
        value=""
      />
      <button
        aria-labelledby="uuid1"
        class="c6"
        data-testid="arrow"
        tabindex="-1"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
    <div
      aria-labelledby="uuid1"
      class="c7 c8"
      data-testid="listbox-container"
      id="listbox_uuid1"
      role="listbox"
      tabindex="0"
    >
      <ul
        class="c9"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          class="c10"
          data-testid="listitem-on"
          id="listbox_uuid1_on"
          role="option"
        >
          <span
            class="c11"
          >
            Ontario
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-qc"
          id="listbox_uuid1_qc"
          role="option"
        >
          <span
            class="c11"
          >
            Quebec
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-bc"
          id="listbox_uuid1_bc"
          role="option"
        >
          <span
            class="c11"
          >
            British Columbia
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-ab"
          id="listbox_uuid1_ab"
          role="option"
        >
          <span
            class="c11"
          >
            Alberta
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-mb"
          id="listbox_uuid1_mb"
          role="option"
        >
          <span
            class="c11"
          >
            Manitoba
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-sk"
          id="listbox_uuid1_sk"
          role="option"
        >
          <span
            class="c11"
          >
            Saskatchewan
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-ns"
          id="listbox_uuid1_ns"
          role="option"
        >
          <span
            class="c11"
          >
            Nova Scotia
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-nb"
          id="listbox_uuid1_nb"
          role="option"
        >
          <span
            class="c11"
          >
            New Brunswick
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-nl"
          id="listbox_uuid1_nl"
          role="option"
        >
          <span
            class="c11"
          >
            Newfoundland and Labrador
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-pe"
          id="listbox_uuid1_pe"
          role="option"
        >
          <span
            class="c11"
          >
            Prince Edward Island
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-nt"
          id="listbox_uuid1_nt"
          role="option"
        >
          <span
            class="c11"
          >
            Northwest Territories
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-nu"
          id="listbox_uuid1_nu"
          role="option"
        >
          <span
            class="c11"
          >
            Nunavut
          </span>
        </li>
        <li
          class="c10"
          data-testid="listitem-yt"
          id="listbox_uuid1_yt"
          role="option"
        >
          <span
            class="c11"
          >
            Yukon
          </span>
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    class="c0"
    data-testid="select-skip-option"
    id="uuid2"
    name="uuid1_skip"
    type="radio"
    value="skip"
  />,
  .c1 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c1:hover {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c1 {
  background: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c1 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c1 {
  background: #F1F2F2;
  border-color: #DBDEE1;
  color: #B7BBC2;
}

.c1 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c1 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    class="c0 c1"
    for="uuid2"
  >
    Skip this question
  </label>,
]
`;

exports[`Select mobile select has a different style 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c5 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c7 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
}

.c8:hover {
  background-color: #DBDEE1;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c6 {
  position: absolute;
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c2:hover {
  cursor: pointer;
}

.c2 svg {
  color: #60666E;
}

.c3 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 1rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3::-moz-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3:-ms-input-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3::placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="listbox_uuid1"
    class="c2"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_uuid1"
      aria-label="Select an option"
      aria-multiline="false"
      class="c3"
      data-testid="input"
      id="uuid1"
      type="text"
      value=""
    />
    <button
      aria-labelledby="uuid1"
      class="c4"
      data-testid="arrow"
      tabindex="-1"
      type="button"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="24"
        width="24"
      />
    </button>
  </div>
  <div
    aria-labelledby="uuid1"
    class="c5 c6"
    data-testid="listbox-container"
    id="listbox_uuid1"
    role="listbox"
    tabindex="0"
  >
    <ul
      class="c7"
      data-testid="listbox-list"
      role="presentation"
    >
      <li
        class="c8"
        data-testid="listitem-on"
        id="listbox_uuid1_on"
        role="option"
      >
        <span
          class="c9"
        >
          Ontario
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-qc"
        id="listbox_uuid1_qc"
        role="option"
      >
        <span
          class="c9"
        >
          Quebec
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-bc"
        id="listbox_uuid1_bc"
        role="option"
      >
        <span
          class="c9"
        >
          British Columbia
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-ab"
        id="listbox_uuid1_ab"
        role="option"
      >
        <span
          class="c9"
        >
          Alberta
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-mb"
        id="listbox_uuid1_mb"
        role="option"
      >
        <span
          class="c9"
        >
          Manitoba
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-sk"
        id="listbox_uuid1_sk"
        role="option"
      >
        <span
          class="c9"
        >
          Saskatchewan
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-ns"
        id="listbox_uuid1_ns"
        role="option"
      >
        <span
          class="c9"
        >
          Nova Scotia
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-nb"
        id="listbox_uuid1_nb"
        role="option"
      >
        <span
          class="c9"
        >
          New Brunswick
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-nl"
        id="listbox_uuid1_nl"
        role="option"
      >
        <span
          class="c9"
        >
          Newfoundland and Labrador
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-pe"
        id="listbox_uuid1_pe"
        role="option"
      >
        <span
          class="c9"
        >
          Prince Edward Island
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-nt"
        id="listbox_uuid1_nt"
        role="option"
      >
        <span
          class="c9"
        >
          Northwest Territories
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-nu"
        id="listbox_uuid1_nu"
        role="option"
      >
        <span
          class="c9"
        >
          Nunavut
        </span>
      </li>
      <li
        class="c8"
        data-testid="listitem-yt"
        id="listbox_uuid1_yt"
        role="option"
      >
        <span
          class="c9"
        >
          Yukon
        </span>
      </li>
    </ul>
  </div>
</div>
`;
